# CSCE689-602-HW3

./: .gitignore  CMakeLists.txt  README.md  run.sh
data/: data_centers.txt  data_distrib_centers.txt  data_distrib_points.txt  data_plus_centers.txt  data_plus_points.txt  data_points.txt  data_ref_centers.txt  data_ref_points.txt
include/: algorithms.hpp  geometry.hpp  sample.hpp  types.hpp  utils.hpp
results/: res_acc.txt  res_time_nc.txt  res_time_np.txt  res_time_nt.txt
scripts/: data_generation.py  data_visualization.py  plots.py
src/: algorithms.cpp  geometry.cpp  main.cpp  sample.cpp  test.cpp  utils.cpp
